# SanRecomp

./: .gitmodules  CMakeLists.txt  README.md
SanRecomp/: CMakeLists.txt  app.cpp  app.h  exports.cpp  main.cpp  stdafx.h
SanRecomp/api/RAGE/: RAGE.h
SanRecomp/api/hk330/: hkpWorld.h
SanRecomp/apu/: audio.cpp
SanRecomp/apu/driver/: sdl2_driver.cpp
SanRecomp/cpu/: guest_thread.cpp  guest_thread.h  ppc_context.h
SanRecomp/gpu/: video.cpp  video.h
SanRecomp/hid/: mouse_camera.cpp  mouse_camera.h
SanRecomp/hid/driver/: sdl_hid.cpp
SanRecomp/install/: installer.cpp  installer.h  iso_extractor.cpp  platform_paths.cpp  platform_paths.h  rpf_extractor.h  shader_converter.cpp  update_checker.cpp
SanRecomp/install/hashes/: dlc_tbogt.cpp  dlc_tbogt.h  dlc_tlad.cpp  dlc_tlad.h  game.cpp  title_update.cpp  title_update.h
SanRecomp/install/xbox360/: title_update_manager.cpp  title_update_manager.h
SanRecomp/kernel/: game_init.cpp  game_init.h  imports.cpp  memory.cpp  save_hooks.cpp  save_system.cpp  save_system.h  sync_table.cpp  sync_table.h  vfs.cpp  vfs.h  xam.cpp  xenon_memory.h
SanRecomp/kernel/io/: file_system.cpp  gta_file_system.cpp  gta_file_system.h  net_session.cpp  net_session.h  net_socket.cpp  net_socket.h  p2p_manager.cpp  p2p_manager.h  session_tracker.cpp  session_tracker.h  session_tracker_community.cpp  session_tracker_firebase.cpp  session_tracker_lan.cpp
SanRecomp/locale/: config_locale.cpp  locale.cpp
SanRecomp/os/: logger.h
SanRecomp/patches/: MainMenuTask_patches.cpp  aspect_ratio_patches.cpp  audio_patches.cpp  gta4_aspect_ratio_patches.cpp  gta4_input_patches.cpp  gta4_input_patches.h  gta4_patches.cpp  gta4_patches.h  patches.h  player_limit_patches.cpp  player_limit_patches.h
SanRecomp/ui/: achievement_overlay.cpp  button_window.cpp  common_menu.cpp  game_window.cpp  gta4_style.h  imgui_utils.cpp  installer_wizard.cpp  message_window_stub.cpp  network_status_overlay.cpp  network_status_overlay.h  options_menu.h  options_menu_stub.cpp
SanRecomp/user/: config.cpp  config.h  config_def.h  paths.h  persistent_storage_manager.cpp  persistent_storage_manager.h
SanRecompLib/: CMakeLists.txt
SanRecompLib/config/: GTA5.toml  GTA5_fresh.toml  GTA5_small.toml
docs/: BUILDING.md  DUMPING-en.md  INSTALLATION_ARCHITECTURE.md  ONLINE_MULTIPLAYER.md
flatpak/: README.md  io.github.ozordi.sanrecomp.desktop  io.github.ozordi.sanrecomp.json  io.github.ozordi.sanrecomp.metainfo.xml
